sdl3/packages/include_C/fertig/SDL_stdinc.h

#define SDL_stdinc_h_
# define SDL_SIZE_MAX SIZE_MAX
# define SDL_SIZE_MAX ((size_t) -1)
#define SDL_HAS_BUILTIN(x) __has_builtin(x)
#define SDL_HAS_BUILTIN(x) 0
/**
 *  The number of elements in an array.
 */
#define SDL_arraysize(array)    (sizeof(array)/sizeof(array[0]))
#define SDL_TABLESIZE(table)    SDL_arraysize(table)
#define SDL_reinterpret_cast(type, expression) reinterpret_cast<type>(expression)
#define SDL_static_cast(type, expression) static_cast<type>(expression)
#define SDL_const_cast(type, expression) const_cast<type>(expression)
#define SDL_reinterpret_cast(type, expression) ((type)(expression))
#define SDL_static_cast(type, expression) ((type)(expression))
#define SDL_const_cast(type, expression) ((type)(expression))
/* @} *//* Cast operators */

/* Define a four character code as a Uint32 */
#define SDL_FOURCC(A, B, C, D) \
    ((SDL_static_cast(Uint32, SDL_static_cast(Uint8, (A))) << 0) | \
     (SDL_static_cast(Uint32, SDL_static_cast(Uint8, (B))) << 8) | \
     (SDL_static_cast(Uint32, SDL_static_cast(Uint8, (C))) << 16) | \
     (SDL_static_cast(Uint32, SDL_static_cast(Uint8, (D))) << 24))
/**
 * A signed 8-bit integer type.
 */
#define SDL_MAX_SINT8   ((Sint8)0x7F)           /* 127 */
#define SDL_MIN_SINT8   ((Sint8)(~0x7F))        /* -128 */
typedef int8_t Sint8;
/**
 * An unsigned 8-bit integer type.
 */
#define SDL_MAX_UINT8   ((Uint8)0xFF)           /* 255 */
#define SDL_MIN_UINT8   ((Uint8)0x00)           /* 0 */
typedef uint8_t Uint8;
/**
 * A signed 16-bit integer type.
 */
#define SDL_MAX_SINT16  ((Sint16)0x7FFF)        /* 32767 */
#define SDL_MIN_SINT16  ((Sint16)(~0x7FFF))     /* -32768 */
typedef int16_t Sint16;
/**
 * An unsigned 16-bit integer type.
 */
#define SDL_MAX_UINT16  ((Uint16)0xFFFF)        /* 65535 */
#define SDL_MIN_UINT16  ((Uint16)0x0000)        /* 0 */
typedef uint16_t Uint16;
/**
 * A signed 32-bit integer type.
 */
#define SDL_MAX_SINT32  ((Sint32)0x7FFFFFFF)    /* 2147483647 */
#define SDL_MIN_SINT32  ((Sint32)(~0x7FFFFFFF)) /* -2147483648 */
typedef int32_t Sint32;
/**
 * An unsigned 32-bit integer type.
 */
#define SDL_MAX_UINT32  ((Uint32)0xFFFFFFFFu)   /* 4294967295 */
#define SDL_MIN_UINT32  ((Uint32)0x00000000)    /* 0 */
typedef uint32_t Uint32;
/**
 * A signed 64-bit integer type.
 */
#define SDL_MAX_SINT64  ((Sint64)0x7FFFFFFFFFFFFFFFll)      /* 9223372036854775807 */
#define SDL_MIN_SINT64  ((Sint64)(~0x7FFFFFFFFFFFFFFFll))   /* -9223372036854775808 */
typedef int64_t Sint64;
/**
 * An unsigned 64-bit integer type.
 */
#define SDL_MAX_UINT64  ((Uint64)0xFFFFFFFFFFFFFFFFull)     /* 18446744073709551615 */
#define SDL_MIN_UINT64  ((Uint64)(0x0000000000000000ull))   /* 0 */
typedef uint64_t Uint64;
#define SDL_IN_BYTECAP(x) _In_bytecount_(x)
#define SDL_INOUT_Z_CAP(x) _Inout_z_cap_(x)
#define SDL_OUT_Z_CAP(x) _Out_z_cap_(x)
#define SDL_OUT_CAP(x) _Out_cap_(x)
#define SDL_OUT_BYTECAP(x) _Out_bytecap_(x)
#define SDL_OUT_Z_BYTECAP(x) _Out_z_bytecap_(x)
#define SDL_stack_alloc(type, count)    (type*)SDL_malloc(sizeof(type)*(count))
#define SDL_stack_free(data)            SDL_free(data)
extern   void * SDL_malloc(size_t size);
extern   void * SDL_calloc(size_t nmemb, size_t size);
extern   void * SDL_realloc(void *mem, size_t size);
extern  void  SDL_free(void *mem);
extern  void  SDL_qsort(void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  void *  SDL_bsearch(const void *key, const void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
/* NOTE: these double-evaluate their arguments, so you should never have side effects in the parameters */
#define SDL_min(x, y) (((x) < (y)) ? (x) : (y))
#define SDL_max(x, y) (((x) > (y)) ? (x) : (y))
#define SDL_clamp(x, a, b) (((x) < (a)) ? (a) : (((x) > (b)) ? (b) : (x)))
extern  void * SDL_memcpy( void *dst, const void *src, size_t len);
#define SDL_memcpy  memcpy
//#define SDL_copyp(dst, src)                                                                 \
//    { SDL_COMPILE_TIME_ASSERT(SDL_copyp, sizeof (*(dst)) == sizeof (*(src))); }             \
//    SDL_memcpy((dst), (src), sizeof(*(src)))

extern  void * SDL_memmove( void *dst,  const void *src, size_t len);
#define SDL_memmove memmove
extern  void * SDL_memset( void *dst, int c, size_t len);
#define SDL_memset  memset
extern  int  SDL_memcmp(const void *s1, const void *s2, size_t len);
extern  size_t  SDL_wcslen(const wchar_t *wstr);
extern  size_t  SDL_wcslcpy( wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  size_t  SDL_wcslcat(wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  wchar_t * SDL_wcsdup(const wchar_t *wstr);
extern  wchar_t * SDL_wcsstr(const wchar_t *haystack, const wchar_t *needle);
extern  int  SDL_wcscmp(const wchar_t *str1, const wchar_t *str2);
extern  int  SDL_wcsncmp(const wchar_t *str1, const wchar_t *str2, size_t maxlen);
extern  size_t  SDL_strlen(const char *str);
extern  size_t  SDL_strlcpy( char *dst, const char *src, size_t maxlen);
extern  size_t  SDL_strlcat(char *dst, const char *src, size_t maxlen);
extern   char * SDL_strdup(const char *str);
extern  char * SDL_strchr(const char *str, int c);
extern  char * SDL_strrchr(const char *str, int c);
extern  char * SDL_strstr(const char *haystack, const char *needle);
extern  char * SDL_strtok_r(char *s1, const char *s2, char **saveptr);
extern  int  SDL_strcmp(const char *str1, const char *str2);
extern  int  SDL_strncmp(const char *str1, const char *str2, size_t maxlen);
extern  int  SDL_strcasecmp(const char *str1, const char *str2);
extern  int  SDL_strncasecmp(const char *str1, const char *str2, size_t len);
extern  int  SDL_sscanf(const char *text, const char *fmt, ...) ;
extern  int  SDL_vsscanf(const char *text,  const char *fmt, va_list ap) ;
extern  int  SDL_snprintf( char *text, size_t maxlen,  const char *fmt, ... );
extern  int  SDL_vsnprintf( char *text, size_t maxlen,  const char *fmt, va_list ap) ;
size_t strlcpy(char* dst, const char* src, size_t size);
size_t strlcat(char* dst, const char* src, size_t size);
size_t wcslcpy(wchar_t *dst, const wchar_t *src, size_t size);
size_t wcslcat(wchar_t *dst, const wchar_t *src, size_t size);
#define SDL_malloc malloc
#define SDL_calloc calloc
#define SDL_realloc realloc
#define SDL_free free
#define SDL_memcpy memcpy
#define SDL_memmove memmove
#define SDL_memset memset
#define SDL_memcmp memcmp
#define SDL_strlcpy strlcpy
#define SDL_strlcat strlcat
#define SDL_strlen strlen
#define SDL_wcslen wcslen
#define SDL_wcslcpy wcslcpy
#define SDL_wcslcat wcslcat
#define SDL_strdup strdup
#define SDL_wcsdup wcsdup
#define SDL_strchr strchr
#define SDL_strrchr strrchr
#define SDL_strstr strstr
#define SDL_wcsstr wcsstr
#define SDL_strtok_r strtok_r
#define SDL_strcmp strcmp
#define SDL_wcscmp wcscmp
#define SDL_strncmp strncmp
#define SDL_wcsncmp wcsncmp
#define SDL_strcasecmp strcasecmp
#define SDL_strncasecmp strncasecmp
#define SDL_sscanf sscanf
#define SDL_vsscanf vsscanf
#define SDL_snprintf snprintf
#define SDL_vsnprintf vsnprintf
/* This needs to be wrapped in an inline rather than being a direct #define,
 * because __builtin_mul_overflow() is type-generic, but we want to be
 * consistent about interpreting a and b as size_t. */
//int SDL_size_mul_overflow_builtin (size_t a,
//                                                     size_t b,
//                                                     size_t *ret)
//{
//    return __builtin_mul_overflow(a, b, ret) == 0 ? 0 : -1;
//}
#define SDL_size_mul_overflow(a, b, ret) (SDL_size_mul_overflow_builtin(a, b, ret))
/* This needs to be wrapped in an inline rather than being a direct #define,
 * the same as the call to __builtin_mul_overflow() above. */
//SDL_FORCE_INLINE int SDL_size_add_overflow_builtin (size_t a,
//                                                     size_t b,
//                                                     size_t *ret)
//{
//    return __builtin_add_overflow(a, b, ret) == 0 ? 0 : -1;
//}
#define SDL_size_add_overflow(a, b, ret) (SDL_size_add_overflow_builtin(a, b, ret))