sdl3/packages/pas_includes/sdl3_stdinc.inc


{ force builds using Clang's static analysis tools to use literal C runtime
   here, since there are possibly tests that are ineffective otherwise.  }
//{$if defined(__clang_analyzer__) && !defined(SDL_DISABLE_ANALYZE_MACROS)}
{ The analyzer knows about strlcpy even when the system doesn't provide it  }
//{$if !defined(HAVE_STRLCPY) && !defined(strlcpy)}
(* Const before type ignored *)

function strlcpy(dst:Pchar; src:Pchar; size:Tsize_t):Tsize_t;cdecl;external;
//{$endif}
{ The analyzer knows about strlcat even when the system doesn't provide it  }
//{$if !defined(HAVE_STRLCAT) && !defined(strlcat)}
(* Const before type ignored *)

function strlcat(dst:Pchar; src:Pchar; size:Tsize_t):Tsize_t;cdecl;external;
//{$endif}
//{$if !defined(HAVE_WCSLCPY) && !defined(wcslcpy)}
(* Const before type ignored *)

function wcslcpy(dst:Pwchar_t; src:Pwchar_t; size:Tsize_t):Tsize_t;cdecl;external;
//{$endif}
//{$if !defined(HAVE_WCSLCAT) && !defined(wcslcat)}
(* Const before type ignored *)

function wcslcat(dst:Pwchar_t; src:Pwchar_t; size:Tsize_t):Tsize_t;cdecl;external;
//{$endif}
{ Starting LLVM 16, the analyser errors out if these functions do not have
   their prototype defined (clang-diagnostic-implicit-function-declaration)  }
//{$include <stdlib.h>}
//{$include <stdio.h>}
//
//const
//  SDL_malloc = malloc;  
//  SDL_calloc = calloc;  
//  SDL_realloc = realloc;  
//  SDL_free = free;  
////{$ifndef SDL_memcpy}
//
//const
//  SDL_memcpy = memcpy;  
////{$endif}
////{$ifndef SDL_memmove}
//
//const
//  SDL_memmove = memmove;  
////{$endif}
////{$ifndef SDL_memset}
//
//const
//  SDL_memset = memset;  
////{$endif}

//const
//  SDL_memcmp = memcmp;  
//  SDL_strlcpy = strlcpy;  
//  SDL_strlcat = strlcat;  
//  SDL_strlen = strlen;  
//  SDL_wcslen = wcslen;  
//  SDL_wcslcpy = wcslcpy;  
//  SDL_wcslcat = wcslcat;  
//  SDL_strdup = strdup;  
//  SDL_wcsdup = wcsdup;  
//  SDL_strchr = strchr;  
//  SDL_strrchr = strrchr;  
//  SDL_strstr = strstr;  
//  SDL_wcsstr = wcsstr;  
//  SDL_strtok_r = strtok_r;  
//  SDL_strcmp = strcmp;  
//  SDL_wcscmp = wcscmp;  
//  SDL_strncmp = strncmp;  
//  SDL_wcsncmp = wcsncmp;  
//  SDL_strcasecmp = strcasecmp;  
//  SDL_strncasecmp = strncasecmp;  
//  SDL_sscanf = sscanf;  
//  SDL_vsscanf = vsscanf;  
//  SDL_snprintf = snprintf;  
//  SDL_vsnprintf = vsnprintf;  
//{$endif}
{*
 * If a * b would overflow, return -1. Otherwise store a * b via ret
 * and return 0.
 *
 * \since This function is available since SDL 3.0.0.
  }
{SDL_FORCE_INLINE int SDL_size_mul_overflow (size_t a, }
{                                            size_t b, }
{                                            size_t *ret) }
{ }
{    if (a != 0 && b > SDL_SIZE_MAX / a)  }
{        return -1; }
{     }
{    *ret = a * b; }
{    return 0; }
{ }
//{$if SDL_HAS_BUILTIN(__builtin_mul_overflow)}
{ This needs to be wrapped in an inline rather than being a direct #define,
 * because __builtin_mul_overflow() is type-generic, but we want to be
 * consistent about interpreting a and b as size_t.  }
{int SDL_size_mul_overflow_builtin (size_t a, }
{                                                     size_t b, }
{                                                     size_t *ret) }
{ }
{    return __builtin_mul_overflow(a, b, ret) == 0 ? 0 : -1; }
{ }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

//function SDL_size_mul_overflow(a,b,ret : longint) : longint;

//{$endif}
{*
 * If a + b would overflow, return -1. Otherwise store a + b via ret
 * and return 0.
 *
 * \since This function is available since SDL 3.0.0.
  }
{SDL_FORCE_INLINE int SDL_size_add_overflow (size_t a, }
{                                            size_t b, }
{                                            size_t *ret) }
{ }
{    if (b > SDL_SIZE_MAX - a)  }
{        return -1; }
{     }
{    *ret = a + b; }
{    return 0; }
{ }
//{$if SDL_HAS_BUILTIN(__builtin_add_overflow)}
{ This needs to be wrapped in an inline rather than being a direct #define,
 * the same as the call to __builtin_mul_overflow() above.  }
{SDL_FORCE_INLINE int SDL_size_add_overflow_builtin (size_t a, }
{                                                     size_t b, }
{                                                     size_t *ret) }
{ }
{    return __builtin_add_overflow(a, b, ret) == 0 ? 0 : -1; }
{ }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

//function SDL_size_add_overflow(a,b,ret : longint) : longint;

//{$endif}
{ This is a generic function pointer which should be cast to the type you expect  }
//{$ifdef SDL_FUNCTION_POINTER_IS_VOID_POINTER}
type
  PSDL_FunctionPointer = ^TSDL_FunctionPointer;
//  TSDL_FunctionPointer = pointer;
//{$else}
//type

  TSDL_FunctionPointer = procedure (para1:pointer);cdecl;
//{$endif}
{ Ends C function definitions when using C++  }
{ C++ end of extern C conditionnal removed }
//{$include <SDL3/SDL_close_code.h>}
//{$endif}
{ SDL_stdinc_h_  }

{$UNDEF read_interface}


{$DEFINE read_implementation}

{ was #define dname def_expr }
function SDL_SIZE_MAX : Tsize_t;
  begin
    SDL_SIZE_MAX:=Tsize_t(-(1));
  end;

//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_HAS_BUILTIN(x : longint) : longint;
//begin
//  SDL_HAS_BUILTIN:=__has_builtin(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_HAS_BUILTIN(x : longint) : longint;
//begin
//  SDL_HAS_BUILTIN:=0;
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_arraysize(array : longint) : longint;
//begin
//  SDL_arraysize:=(sizeof(array))/(sizeof(array[0]));
//end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
//function SDL_TABLESIZE(table : longint) : longint;
//begin
//  SDL_TABLESIZE:=SDL_arraysize(table);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_reinterpret_cast(_type,expression : longint) : Ttype;
//begin
//  SDL_reinterpret_cast:=Ttype(expression);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_static_cast(_type,expression : longint) : Ttype;
//begin
//  SDL_static_cast:=Ttype(expression);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_const_cast(_type,expression : longint) : Ttype;
//begin
//  SDL_const_cast:=Ttype(expression);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_FOURCC(A,B,C,D : longint) : longint;
//begin
//  SDL_FOURCC:=((((SDL_static_cast(Uint32,SDL_static_cast(Uint8,A))) shl 0) or ((SDL_static_cast(Uint32,SDL_static_cast(Uint8,B))) shl 8)) or ((SDL_static_cast(Uint32,SDL_static_cast(Uint8,C))) shl 16)) or ((SDL_static_cast(Uint32,SDL_static_cast(Uint8,D))) shl 24);
//end;

{ was #define dname def_expr }
function SDL_MAX_SINT8 : TSint8;
  begin
    SDL_MAX_SINT8:=TSint8($7F);
  end;

{ was #define dname def_expr }
function SDL_MIN_SINT8 : TSint8;
  begin
    SDL_MIN_SINT8:=TSint8( not ($7F));
  end;

{ was #define dname def_expr }
function SDL_MAX_UINT8 : TUint8;
  begin
    SDL_MAX_UINT8:=TUint8($FF);
  end;

{ was #define dname def_expr }
function SDL_MIN_UINT8 : TUint8;
  begin
    SDL_MIN_UINT8:=TUint8($00);
  end;

{ was #define dname def_expr }
function SDL_MAX_SINT16 : TSint16;
  begin
    SDL_MAX_SINT16:=TSint16($7FFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_SINT16 : TSint16;
  begin
    SDL_MIN_SINT16:=TSint16( not ($7FFF));
  end;

{ was #define dname def_expr }
function SDL_MAX_UINT16 : TUint16;
  begin
    SDL_MAX_UINT16:=TUint16($FFFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_UINT16 : TUint16;
  begin
    SDL_MIN_UINT16:=TUint16($0000);
  end;

{ was #define dname def_expr }
function SDL_MAX_SINT32 : TSint32;
  begin
    SDL_MAX_SINT32:=TSint32($7FFFFFFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_SINT32 : TSint32;
  begin
    SDL_MIN_SINT32:=TSint32( not ($7FFFFFFF));
  end;

{ was #define dname def_expr }
function SDL_MAX_UINT32 : TUint32;
  begin
    SDL_MAX_UINT32:=TUint32($FFFFFFFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_UINT32 : TUint32;
  begin
    SDL_MIN_UINT32:=TUint32($00000000);
  end;

{ was #define dname def_expr }
function SDL_MAX_SINT64 : TSint64;
  begin
    SDL_MAX_SINT64:=TSint64($7FFFFFFFFFFFFFFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_SINT64 : TSint64;
  begin
    SDL_MIN_SINT64:=TSint64( not ($7FFFFFFFFFFFFFFF));
  end;

{ was #define dname def_expr }
function SDL_MAX_UINT64 : Uint64;
  begin
    SDL_MAX_UINT64:=TUint64($FFFFFFFFFFFFFFFF);
  end;

{ was #define dname def_expr }
function SDL_MIN_UINT64 : Uint64;
  begin
    SDL_MIN_UINT64:=TUint64($0000000000000000);
  end;

//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_IN_BYTECAP(x : longint) : longint;
//begin
//  SDL_IN_BYTECAP:=_In_bytecount_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_INOUT_Z_CAP(x : longint) : longint;
//begin
//  SDL_INOUT_Z_CAP:=_Inout_z_cap_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_Z_CAP(x : longint) : longint;
//begin
//  SDL_OUT_Z_CAP:=_Out_z_cap_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_CAP(x : longint) : longint;
//begin
//  SDL_OUT_CAP:=_Out_cap_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_BYTECAP(x : longint) : longint;
//begin
//  SDL_OUT_BYTECAP:=_Out_bytecap_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_Z_BYTECAP(x : longint) : longint;
//begin
//  SDL_OUT_Z_BYTECAP:=_Out_z_bytecap_(x);
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//function SDL_stack_alloc(_type,count : longint) : Ptype;
//begin
//  SDL_stack_alloc:=Ptype(SDL_malloc((sizeof(_type))*count));
//end;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_stack_free(data : longint) : longint;
//begin
//  SDL_stack_free:=SDL_free(data);
//end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_min(x,y : longint) : longint;
var
   if_local1 : longint;
(* result types are not known *)
begin
  if x<y then
    if_local1:=x
  else
    if_local1:=y;
  SDL_min:=if_local1;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_max(x,y : longint) : longint;
var
   if_local1 : longint;
(* result types are not known *)
begin
  if x>y then
    if_local1:=x
  else
    if_local1:=y;
  SDL_max:=if_local1;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_clamp(x,a,b : longint) : longint;
var
   if_local1, if_local2 : longint;
(* result types are not known *)
begin
  if x>b then
    if_local1:=b
  else
    if_local1:=x;
  if x<a then
    if_local2:=a
  else
    if_local2:=if_local1;
  SDL_clamp:=if_local2;
end;
